[package]
name = "termchat"
version = "1.1.0"
authors = ["lemunozm <lemunozm@gmail.com>"]
description = "Distributed LAN chat application in the terminal"
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/lemunozm/termchat/"
repository = "https://github.com/lemunozm/termchat/"
keywords = ["network", "chat", "lan", "terminal", "multicast"]
categories = ["command-line-utilities", "command-line-interface"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
message-io = "0.4.5"
serde = { version = "1.0.116", features = ["derive"] }
crossterm = "0.18.0"
tui = { version = "0.12.0", default-features = false, features = ['crossterm'] }
whoami = "0.9.0"
chrono = "0.4.19"
clap = "2.33.3"
unicode-width = "0.1.8"
