[package]
name = "termchat"
version = "1.1.2"
authors = ["lemunozm <lemunozm@gmail.com>"]
description = "Distributed LAN chat application in the terminal"
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/lemunozm/termchat/"
repository = "https://github.com/lemunozm/termchat/"
keywords = ["network", "chat", "lan", "terminal", "multicast"]
categories = ["command-line-utilities", "command-line-interface"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
message-io = "0.5.1"
serde = { version = "1.0.118", features = ["derive"] }
crossterm = "0.19.0"
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
whoami = "1.0.3"
chrono = "0.4.19"
clap = "2.33.3"
unicode-width = "0.1.8"
resize = "0.5.5"
#minifb = "0.19.1"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = { version = "0.12.0", optional = true }

[dev-dependencies]
rand = "0.8.1"

[features]
stream-video = ["v4l"]
ui-test = []
