[package]
name = "termchat"
version = "1.3.1"
authors = ["lemunozm <lemunozm@gmail.com>"]
description = "Distributed LAN chat application in the terminal"
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/lemunozm/termchat/"
repository = "https://github.com/lemunozm/termchat/"
keywords = ["network", "chat", "lan", "terminal", "multicast"]
categories = ["command-line-utilities", "command-line-interface"]

[badges]
maintenance = { status = "passively-maintenance" }

[dependencies]
message-io = { default-features = false, features = ["udp", "tcp"], version = "0.14" }
bincode = "1.3.3"
serde = { version = "1.0.124", features = ["derive"] }
#keep the same version as tui for faster compile time
crossterm = "0.18.2"
tui = { version = "0.14.0", default-features = false, features = ['crossterm', 'serde'] }
whoami = "1.1.0"
chrono = "0.4.19"
clap = "2.34.0"
unicode-width = "0.1.8"
shellwords = "1.1.0"
shellexpand = "2.1.0"
toml = "0.5.8"
dirs-next = "2.0.0"
rgb = {version="0.8.25", features=["serde"]}
resize = "0.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = { version = "0.14.0", optional = true }

[dev-dependencies]
rand = "0.8.3"

[features]
stream-video = ["v4l"]
ui-test = []
